--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@ main {
 h1 {
     font-size: 2rem;
     line-height: 1.3;
-    margin: 1rem 0rem;    
+    margin: 1rem 0;   
 }
 
 
@@ -43,19 +43,19 @@ h1 {
     border-bottom: 2px solid #ff3530;
 }
 
-figcaption, .news, .sub-title, div p, h2 {
+figcaption, div p, time, h2 {
     font-family: 'Open Sans', sans-serif;
 }
 
 
-div p {
+div p:nth-child(4), time {
     font-size: .85rem;
     margin-bottom: 0;
 }
 
 
 figure {
-    margin: 1.25em 1.25em;
+    margin: 1.25em 0;
 }
 
 
@@ -72,9 +72,12 @@ ul {
     padding: 0;
 }
 
+
 a:link { 
     color: #1a1a1a;
+
 }
+
 
 a:hover {
     text-decoration: none; 
